<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_check_for_updates"
        android:title="@string/bmchat_check_for_updates"
        android:summary="@string/bmchat_check_for_updates_summary" />

    <Preference
        android:key="pref_publish_profile"
        android:title="@string/bmchat_profile_publish_menu"
        android:summary="@string/bmchat_profile_publish_explain" />

    <Preference
        android:key="pref_telegram_bots"
        android:title="@string/bmchat_bots_title"
        android:summary="@string/bmchat_bots_summary" />

    <Preference
        android:key="pref_email_bots"
        android:title="@string/bmchat_email_bots_title"
        android:summary="@string/bmchat_email_bots_summary" />

    <Preference
        android:key="pref_view_log"
        android:title="@string/pref_view_log" />

    <PreferenceCategory android:title="@string/pref_server">

        <Preference
            android:key="pref_relay_list_button"
            android:title="@string/transports" />

        <Preference
            android:key="proxy_settings_button"
            android:title="@string/proxy_settings" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_bcc_self"
            android:title="@string/pref_multidevice"
            android:summary="@string/pref_multidevice_explain" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_experimental_features">

        <Preference
            android:summary="@string/pref_experimental_features_explain"
            android:selectable="false" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_location_streaming_enabled"
            android:title="@string/pref_on_demand_location_streaming"
            android:summary="@string/pref_on_demand_location_streaming_summary" />

        <Preference
            android:key="pref_webxdc_store_url"
            android:title="@string/webxdc_store_url"
            android:summary="@string/none" />

    </PreferenceCategory>

    <PreferenceCategory>
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_screen_security"
            android:summary="@string/pref_screen_security_explain"
            android:title="@string/pref_screen_security" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_incognito_keyboard"
            android:summary="@string/pref_incognito_keyboard_explain"
            android:title="@string/pref_incognito_keyboard" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_legacy"
        android:title="@string/bmchat_mail_folder_category">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_mvbox_move"
            android:title="@string/pref_auto_folder_moves"
            android:summary="@string/pref_auto_folder_moves_summary" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_only_fetch_mvbox"
            android:title="@string/pref_only_fetch_mvbox_title"
            android:summary="@string/pref_only_fetch_mvbox_summary" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_fetch_spam"
            android:title="@string/bmchat_pref_fetch_spam_title"
            android:summary="@string/bmchat_pref_fetch_spam_summary" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_scan_all_folders"
            android:title="@string/bmchat_pref_scan_all_folders_title"
            android:summary="@string/bmchat_pref_scan_all_folders_summary" />

    </PreferenceCategory>

</PreferenceScreen>
