<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/media_preview__edit"
        android:title="@string/menu_group_name_and_image"
        android:icon="@drawable/ic_create_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/show_in_chat"
        android:title="@string/show_in_chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/media_preview__share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />
    <!-- BMChat 2.49.96: mute always visible for video — same white icon style as Save. -->
    <item
        android:id="@+id/save"
        android:title="@string/menu_export_attachments"
        android:icon="@drawable/ic_file_download_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/bmchat_media_preview__mute"
        android:title="@string/bmchat_mute_audio"
        android:icon="@drawable/ic_volume_up_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/media_preview__overview"
        android:title="@string/tab_gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>
